# python-project-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: code-formatting.yaml  pre-merge.yaml  run-tests.yaml
