[tool.poetry]
name = "PROJECT NAME"
version = "0.1.0"
description = "SOME DESCRIPTION"
authors = []
readme = "README.md"
packages = [{include = "PACKAGE_NAME"}]
homepage = "HOMEPAGE"
repository = "REPOSITORY"
keywords = []

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
taskipy = "^1.12.2"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = { cmd = "pytest", help="Run tests"}
lint = { cmd = "pre-commit run --all-files", help="Code format checks"}
